--- a/package.json
+++ b/package.json
@@ -10,14 +10,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.7",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.46",
+    "rc-pagination": "^5.0.0",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.17.1",
+    "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
