--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "rc-pagination": "^5.0.0",
     "react": "^18.3.1",
     "react-big-calendar": "^1.17.1",
+    "react-bootstrap": "^2.10.7",
     "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^7.1.1"
   },
