--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dayjs": "^1.11.13",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.46",
+    "papaparse": "^5.4.1",
     "rc-pagination": "^5.0.0",
     "react": "^18.3.1",
     "react-big-calendar": "^1.17.1",
@@ -33,7 +34,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-paginate": "^8.2.0",
-    "react-router-dom": "^7.1.1"
+    "react-router-dom": "^7.1.1",
+    "react-to-print": "^3.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
